# SWB-QML-UI

./: CMakeLists.txt  LICENSE  README.md
cmake/: SwbControlsConfig.cmake.in
components/: CMakeLists.txt  SwbBusyIndicator.qml  SwbButton.qml  SwbCheckBox.qml  SwbComboBox.qml  SwbDayOfWeekRow.qml  SwbDelayButton.qml  SwbDial.qml  SwbDialog.qml  SwbDialogButtonBox.qml  SwbDoubleSpinBox.qml  SwbDrawer.qml  SwbFrame.qml  SwbGroupBox.qml  SwbHorizontalHeaderView.qml  SwbLabel.qml  SwbMenu.qml  SwbMenuBar.qml  SwbMenuBarItem.qml  SwbMenuItem.qml  SwbMenuSeparator.qml  SwbMonthGrid.qml  SwbPage.qml  SwbPageIndicator.qml  SwbPalette.qml  SwbPane.qml  SwbPopup.qml  SwbProgressBar.qml  SwbRadioButton.qml  SwbRangeSlider.qml  SwbRoundButton.qml  SwbScrollBar.qml  SwbScrollIndicator.qml  SwbScrollView.qml  SwbSearchField.qml  SwbSelectionRectangle.qml  SwbSlider.qml  SwbSpinBox.qml  SwbSplitView.qml  SwbStackView.qml  (+16 more)
docs/: CONTROLS-Chinese.md  CONTROLS.md  README-Chinese.md
docx/: CONTROLS-Chinese.md  CONTROLS.md  README-Chinese.md
examples/: CMakeLists.txt  DashboardPage.qml  GalleryCategoryPage.qml  GalleryCommonPage.qml  GalleryDataPage.qml  GalleryFeaturedCarousel.qml  GalleryInputPage.qml  GalleryLayoutPage.qml  GalleryOverlaysPage.qml  GalleryPage.qml  GallerySection.qml  GalleryStatusPage.qml  HomePage.qml  Main.qml  RoundImage.qml  main.cpp
examples/translations/: SwbExample_zh_CN.ts
